testing/errors/subst4.a
	*=$1000
	!set sub = .5	; sub is a float
base?sub	nop	; -> "undefined or not integer"
